.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-backend-service
spec:
  ports:
    - port: 4200
  selector:
    app: simple-backend-deployment-label
