.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-backend-ingress
spec:
  tls:
    - hosts:
        - api2.wb-bot.fun
      secretName: mp-bot-tls-secret
  rules:
    - host: "api2.wb-bot.fun"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: simple-backend-service
                port:
                  number: 3000

  ingressClassName: nginx

---
